# PromptDock

./: .env.example  .firebaserc  .gitignore  AGENTS.md  API.md  ARCHITECTURE.md  CHANGELOG.md  CONFIGURATION.md  DEPLOYMENT.md  DEVELOPMENT.md  README.md  TESTING.md  TROUBLESHOOTING.md  eslint.config.js  firebase.json  firestore.indexes.json  firestore.rules  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md  release.yml
.github/PULL_REQUEST_TEMPLATE/: release.md
.github/workflows/: ci.yml  firebase-hosting.yml  release-macos.yml  release-windows.yml
assets/: landing.css
docs/: API.md  ARCHITECTURE.md  CONFIGURATION.md  DEPLOYMENT.md  DEVELOPMENT.md  Issues.md  RELEASE.md  SYNC.md  TESTING.md  TROUBLESHOOTING.md  index.html
docs/adr/: 0001-develop-integration-branch.md  0002-engineering-hygiene-automation.md  README.md
docs/assets/: landing.css
docs/samples/: index.html
e2e/: create-prompt.spec.ts  dialog-accessibility.spec.ts  helpers.ts  library-organization.spec.ts  onboarding-and-auth.spec.ts  prompt-authoring.spec.ts  prompt-execution.spec.ts  prompt-lifecycle.spec.ts  responsive-navigation.spec.ts  settings-import-export.spec.ts  user-flows.spec.ts
e2e-tauri/: run-tauri-e2e.mjs  tauri.e2e.conf.json  wdio.conf.mjs
e2e-tauri/specs/: desktop-smoke.e2e.mjs
samples/: command.html  sample-styles.css  workbench.html
src/: App.tsx  main.tsx  setup.test.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src/__tests__/: App.analytics.test.ts
src/components/: AccountPanel.tsx  AppShell.tsx  CommandPalette.tsx  EmptyState.tsx  IconTile.tsx  LibraryScreen.tsx  OnboardingScreen.tsx  PromptCard.tsx  PromptEditor.tsx  PromptFiltersPopover.tsx  PromptGrid.tsx  PromptInspector.tsx  PromptSortDropdown.tsx  SearchBar.tsx  SettingsScreen.tsx  Sidebar.tsx  SyncStatusBar.tsx  TagPill.tsx  ToastContainer.tsx  TopBar.tsx  VariableFillModal.tsx
src/contexts/: AppModeProvider.tsx
src/data/: mock-data.ts
src/firebase/: config.ts  env.ts
src/hooks/: use-app-shell-controller.ts  (+14 more)
(+325 files in other folders)
