[package]
name = "prompt-dock"
version = "0.1.0"
description = "A local-first desktop prompt recipe manager"
authors = []
edition = "2021"

[lib]
name = "prompt_dock_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-store = "2"
enigo = { version = "0.6", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
